# utopia

./: .gitignore  LICENSE  script.js  shell.nix  stack.yaml  styles.css  utopia.cabal
app/: Html.hs  Main.hs
src/: Builtins.hs  Code.hs  CodeDb.hs  CodeDbIdGen.hs  CodeTree.hs  Diff.hs  DiffTree.hs  Eval.hs  Id.hs  Lam.hs  Main.hs  MonoidMap.hs  Parser.hs  Prim.hs  Primitives.hs  Run.hs  Types.hs
src/Data/Functor/Foldable/: Extended.hs
tests/: Diffs.hs  ParserTest.hs  test.hs
web/: stack.yaml  utopia.cabal
web/app/: Main.hs
