name:                utopia
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Iain McCoy
maintainer:          iain@mccoy.id.au
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Builtins, Code, CodeDb, CodeDbIdGen, CodeTree, Data.Functor.Foldable.Extended, Diff, DiffTree, Eval, Id, Lam, Parser, Primitives, Run
  other-modules:       MonoidMap
  default-extensions:  DeriveFunctor,
                       DeriveTraversable,
                       FunctionalDependencies,
                       LambdaCase,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       OverloadedStrings,
                       RecordWildCards,
                       StandaloneDeriving,
                       TemplateHaskell,
                       TupleSections
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9,
                       constraints,
                       containers,
                       Earley,
                       edit-distance,
                       either,
                       lens,
                       mtl,
                       random,
                       recursion-schemes,
                       safe,
                       text,
                       transformers
  ghc-options:         -Wall

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  default-extensions:  NamedFieldPuns,
                       OverloadedStrings,
                       RankNTypes,
                       RecordWildCards
  build-depends:       base,
                       constraints,
                       Earley,
                       lens,
                       mtl,
                       random,
                       recursion-schemes,
                       tasty,
                       tasty-hunit,
                       text,
                       transformers,
                       utopia
  ghc-options:         -Wall

executable utopia
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Html
  default-extensions:  LambdaCase,
                       NamedFieldPuns,
                       OverloadedStrings,
                       RecordWildCards
  build-depends:       base >=4.8 && <4.9,
                       containers,
                       blaze-html,
                       bytestring,
                       either,
                       lens,
                       mtl,
                       process,
                       safe,
                       text,
                       utopia,
                       random
  default-language:    Haskell2010
  ghc-options:         -Wall
